# daily-trade

./: .gitignore  .pre-commit-config.yaml  HLD.md  IMPLEMENTATION.md  LLD.md  Makefile  README.md  docker-compose.yml  pyrightconfig.json
.clinerules/: absolute_mode.md
backend/: .env.example  pyproject.toml  requirements.txt  requirements_pinned.txt
backend/app/: __init__.py
backend/ingestion/: document_processor.py  embedder.py  image_processor.py
backend/repositories/: opensearch_repository.py
backend/utils/: aws_credentials.py
docs/: AWS_CDK_REGION_SETUP.md  CODE_QUALITY.md  LOCAL_OPENSEARCH_ACCESS.md
infrastructure/: README.md  cdk.json  package.json
infrastructure/lib/: daily-trade-stack.ts
scripts/: ingest_documents.py  opensearch_query_helper.py
